[tool.poetry]
name = "wxpush"
version = "0.1.0"
description = ""
authors = ["hongzhe <hongzhe2022@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
pyyaml = "==6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

